--- a/dofinale/templates/post/post_detail.html
+++ b/dofinale/templates/post/post_detail.html
@@ -1,18 +1,19 @@
-<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+{% extends 'base.html' %}
+{% block content %}
 <div class="container my-3">
-    <!-- 질문 -->
+    <!-- 게시물 -->
     <h2 class="border-bottom py-2">{{ userpost.subject }}</h2>
     <div class="card my-3">
         <div class="card-body">
             <div class="card-text" style="white-space: pre-line;">{{ userpost.content }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2">
-                    {{ userpost.create_date }}
+                    {{ userpost.create_date|datetime }}
                 </div>
             </div>
         </div>
     </div>
-    <!-- 답변 목록 -->
+    <!-- 댓글 목록 -->
     <h5 class="border-bottom my-3 py-2">{{ userpost.comment_set|length }}개의 댓글이 있습니다.</h5>
     {% for comment in userpost.comment_set %}
     <div class="card my-3">
@@ -20,17 +21,33 @@
             <div class="card-text" style="white-space: pre-line;">{{ comment.content }}</div>
             <div class="d-flex justify-content-end">
                 <div class="badge bg-light text-dark p-2">
-                    {{ comment.create_date }}
+                    {{ comment.create_date|datetime }}
                 </div>
             </div>
         </div>
     </div>
     {% endfor %}
-    <!-- 답변 등록 -->
+    <!-- 댓글 등록 -->
     <form action="{{ url_for('comment.create', userpost_id=userpost.id) }}" method="post" class="my-3">
+        {{ form.csrf_token }}
+        <!-- 오류표시 Start -->
+        {% if form.errors %}
+        <div class="alert alert-danger" role="alert">
+            {% for field, errors in form.errors.items() %}
+            <strong>{{ form[field].label }}</strong>
+            <ul>
+                {% for error in errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endfor %}
+        </div>
+        {% endif %}
+        <!-- 오류표시 End -->
         <div class="mb-3">
             <textarea name="content" id="content" class="form-control" rows="10"></textarea>
         </div>
         <input type="submit" value="댓글 등록" class="btn btn-primary">
     </form>
 </div>
+{% endblock %}
