--- a/dofinale/templates/navbar.html
+++ b/dofinale/templates/navbar.html
@@ -12,9 +12,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             {% if g.user %}
-            <ul class="navbar-nav">
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">{{ g.user.userid }} (로그아웃)</a>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <span class="navbar-text">
+                        {{ g.user.userid }} 님 환영합니다!
+                    </span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('auth.delete_user') }}">계정 탈퇴</a>
                 </li>
             </ul>
             {% else %}
