--- a/dofinale/templates/cover.html
+++ b/dofinale/templates/cover.html
@@ -13,7 +13,7 @@
     
 
     <!-- Bootstrap core CSS -->
-<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
     <style>
       .bd-placeholder-img {
@@ -33,7 +33,8 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="../static/css/cover.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/cover.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}">
   </head>
   <body class="d-flex h-100 text-center text-white bg-dark">
     
@@ -50,11 +51,19 @@
   </header>
 
   <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-    </p>
+    <div class="container d-flex align-items-center justify-content-center text-center h-100">
+            <div class="box">
+              <div class="title">
+                <span class="block"></span>
+                <h1>두피날레<span></span></h1>
+              </div>
+
+              <div class="role">
+                <div class="block"></div>
+                <p>AI 기반 두피 유형 진단 서비스</p>
+              </div>
+            </div>
+          </div>
   </main>
 
   <footer class="mt-auto text-white-50">
