--- a/dofinale/templates/post/post_list.html
+++ b/dofinale/templates/post/post_list.html
@@ -3,23 +3,25 @@
 <div class="container my-3">
     <table class="table">
         <thead>
-        <tr class="table-dark">
+        <tr class="text-center table-dark">
             <th>번호</th>
-            <th>제목</th>
+            <th style="width:50%">제목</th>
+            <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         </thead>
         <tbody>
         {% if userpost_list %}
         {% for userpost in userpost_list.items %}
-        <tr>
-            <td>{{ userpost_list.total - ((userpost_list.page-1) * userpost_list.per_page) - loop.index0 }}</td>
-            <td>
+        <tr class="text-center">
+            <td >{{ userpost_list.total - ((userpost_list.page-1) * userpost_list.per_page) - loop.index0 }}</td>
+            <td class="text-start">
                 <a href=" {{ url_for('post.detail', userpost_id=userpost.id) }}/">{{ userpost.subject }}</a>
                 {% if userpost.comment_set|length > 0 %}
                 <span class="text-danger small mx-2">{{ userpost.comment_set|length }}</span>
                 {% endif %}
             </td>
+            <td>{{ userpost.user.userid }}</td>  <!-- 글쓴이 추가 -->
             <td>{{ userpost.create_date|datetime }}</td>
         </tr>
         {% endfor %}
