--- a/dofinale/templates/fileup.html
+++ b/dofinale/templates/fileup.html
@@ -7,4 +7,7 @@
       <button type="submit" class="btn btn-primary my-2">사진 전송</button>
     </div>
 </form>
+{% if result %}
+<p>{{ result }}</p>
+{% endif %}
 {% endblock %}
