디자인 및 챗봇 연동 중

--- a/dofinale/templates/auth/login.html
+++ b/dofinale/templates/auth/login.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
+    <!--  로그인이 안 된 상태에서 로그인이 필요한 서비스에 접속하는 경우 경고창을 띄워줌  -->
+    {% if request.args.get('next', '') %}
+    <div class="alert alert-danger" role="alert">
+        로그인을 먼저 진행하세요.
+    </div>
+    {% endif %}
+
     <h5 class="my-3 border-bottom pb-2">로그인</h5>
     <form method="post">
         {{ form.csrf_token }}
