--- a/dofinale/templates/chatbot.html
+++ b/dofinale/templates/chatbot.html
@@ -1,8 +1,11 @@
 <df-messenger
+  {% if result %}
+  expand=True
+  {% endif %}
   intent="WELCOME"
-  chat-title="pizza_chatbot"
-  agent-id="80233580-d846-4b0c-b804-675df2ad50f9"
+  chat-title="Doofy"
+  agent-id="dcc4f570-5e46-4f16-bc2c-97d2c10c0bb7"
   language-code="ko"
-  chat-icon="https://4ebb-112-221-224-124.jp.ngrok.io/static/images/icons/chatbot_icon.png"
+  chat-icon="https://raw.githubusercontent.com/SongYeongchang/DoFinale/master/dofinale/static/images/icons/chatbot_icon.png"
 ></df-messenger>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
