두피 유형 분석 결과와 챗봇 연동 작업

--- a/dofinale/templates/base.html
+++ b/dofinale/templates/base.html
@@ -26,6 +26,7 @@
     {% block content %}
     {% endblock %}
     <!-- 기본 템플릿 안에 삽입될 내용 End -->
+        {% include "chatbot.html" %}
         <footer class="mt-auto text-white-50">
             <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
         </footer>
