--- a/dofinale/templates/fileup.html
+++ b/dofinale/templates/fileup.html
@@ -7,9 +7,8 @@
       <button type="submit" class="btn btn-primary my-2">사진 전송</button>
     </div>
 </form>
-{% if result %}
-<p>{{ result }}</p>
-{% endif %}
+{% if resultbool %}
 <!-- Dialogflow 챗봇 -->
-{% include "chatbot.html" %}
+
+{% endif %}
 {% endblock %}
