--- a/dofinale/templates/header.html
+++ b/dofinale/templates/header.html
@@ -6,8 +6,8 @@
 
         <nav class="nav nav-masthead justify-content-center float-md-end">
     <a class="nav-link" aria-current="page" href="{{ url_for('service.service') }}">두피 분석</a>
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
-    <a class="nav-link" href="#">Features</a>
+    <a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a>
+    <a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a>
     <a class="nav-link" href="#">Contact</a>
   </nav>
 </div>
