--- a/dofinale/static/css/cover.css
+++ b/dofinale/static/css/cover.css
@@ -17,12 +17,13 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  /*-webkit-animation: fadein 1s;*/
+  /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);*/
+  /*box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
 }
 
 .cover-container {
-  max-width: 42em;
+  max-width: 52em;
 }
 
 
@@ -38,9 +39,10 @@ body {
   border-bottom: .25rem solid transparent;
 }
 
-.nav-masthead .nav-link:hover,
+/*.nav-masthead .nav-link:hover,*/
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  color: rgba(255, 255, 255, .9);
+  border-bottom-color: rgba(255, 255, 255, .9);
 }
 
 .nav-masthead .nav-link + .nav-link {
@@ -51,3 +53,12 @@ body {
   color: #fff;
   border-bottom-color: #fff;
 }
+
+/*@-webkit-keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}*/
