--- a/dofinale/templates/header.html
+++ b/dofinale/templates/header.html
@@ -1,14 +1,24 @@
+<!-- Header -->
 <header class="mb-auto">
     <div>
-        <h3 class="float-md-start mb-0">
-            <a class="navbar-brand" href="{{ url_for('main.intro') }}">DoFinale</a>
-        </h3>
-
+        <h3 class="float-md-start mb-0 animated flip">DoFinale</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
-    <a class="nav-link" aria-current="page" href="{{ url_for('service.service') }}">두피 분석</a>
-    <a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a>
-    <a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a>
-    <a class="nav-link" href="#">Contact</a>
-  </nav>
-</div>
+            <ul class="custom-nav">
+                <li><a class="nav-link" href="{{ url_for('main.intro') }}">홈</a></li>
+                <li><a class="nav-link" href="{{ url_for('service.self_survey') }}">자가 진단</a></li>
+                <li><a class="nav-link" href="{{ url_for('service.service') }}">두피 분석</a></li>
+                <li><a class="nav-link" href="{{ url_for('post._list') }}">게시판</a></li>
+                {% if g.user %}
+                <li><a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a></li>
+                <li><a class="nav-link" href="{{ url_for('auth.delete_user') }}">계정 탈퇴</a></li>
+                {% else %}
+                <li><a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a></li>
+                <li><a class="nav-link" href="{{ url_for('auth.signup') }}">계정 생성</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
 </header>
+<!-- Custom Navbar Style -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/custom-nav.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/nav-brand-flip.css') }}" />
