--- a/dofinale/templates/intro.html
+++ b/dofinale/templates/intro.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
-<div class="container d-flex align-items-center justify-content-center text-center h-100">
+
+<!-- Intro Logo Animation -->
+<div class="row d-flex align-items-center justify-content-center text-center h-100">
     <div class="box">
         <div class="title">
             <span class="block"></span>
@@ -14,4 +15,8 @@
         </div>
     </div>
 </div>
+
+<!-- Intro Logo Animation CSS -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
+
 {% endblock %}
