--- a/dofinale/templates/chatbot.html
+++ b/dofinale/templates/chatbot.html
@@ -3,6 +3,6 @@
   chat-title="pizza_chatbot"
   agent-id="80233580-d846-4b0c-b804-675df2ad50f9"
   language-code="ko"
-  chat-icon="https://4ebb-112-221-224-124.jp.ngrok.io/static/images/icons/chatbot_icon.png"
+  chat-icon="https://raw.githubusercontent.com/SongYeongchang/DoFinale/master/dofinale/static/images/icons/chatbot_icon.png"
 ></df-messenger>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
