--- a/dofinale/templates/header.html
+++ b/dofinale/templates/header.html
@@ -1,52 +1,50 @@
 <!-- Header -->
-<header class="p-3 bg-dark text-white">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a class="navbar-brand float-md-start mb-0 text-white animated flip" href="{{ url_for('main.index') }}">DoFinale</a>
+<header class="w-100 mb-auto border-bottom">
+    <!-- This div is  intentionally blank. It creates the transparent black overlay over the video which you can modify in the CSS -->
+      <div class="overlay"></div>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-        </ul>
+      <!-- The HTML5 video element that will create the background video on the header -->
+      <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+        <source src="{{ url_for('static', filename='videos/bg_video2.mp4') }}" type="video/mp4">
+      </video>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form>
-
-        <div class="text-end">
-        {% if g.user %}
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+      <!-- The header content -->
+      <!-- Intro Logo Animation -->
+<div class="container d-flex align-items-center justify-content-center text-center h-100">
+    <div class="box">
+        <div class="title">
+            <span class="block"></span>
+            <h1>두피날레<span></span></h1>
         </div>
-      </div>
+
+    <div class="role">
+        <div class="block"></div>
+            <p>AI 기반 두피 유형 진단 서비스</p>
+        </div>
     </div>
-</header>
-
-
-<div class="container">
-    <header class="mb-auto border-bottom">
-        <!--  Navigation Bar  -->
-        <nav class="nav navbar navbar-expand-lg nav-masthead justify-content-center">
-            <a class="navbar-brand float-md-start mb-0 text-white animated flip" href="{{ url_for('main.index') }}">DoFinale</a>
-            <ul class="custom-nav">
-                <li><a class="nav-link" href="{{ url_for('main.intro') }}">홈</a></li>
-                <li><a class="nav-link" href="{{ url_for('service.self_survey') }}">자가 진단</a></li>
-                <li><a class="nav-link" href="{{ url_for('service.service') }}">두피 분석</a></li>
-                <li><a class="nav-link" href="{{ url_for('post._list') }}">게시판</a></li>
+</div>
+    <!--  Navigation Bar  -->
+    <nav class="navbar navbar-expand-lg nav-masthead">
+        <a class="navbar-brand mb-0 me-auto text-white animated flip" href="{{ url_for('main.index') }}">DoFinale</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('service.scalp_diagnosis') }}">두피 분석</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('post._list') }}">게시판</a></li>
                 {% if g.user %}
-                <li><a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a></li>
-                <li><a class="nav-link" href="{{ url_for('auth.delete_user') }}">계정 탈퇴</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.logout') }}">로그아웃</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.delete_user') }}">계정 탈퇴</a></li>
                 {% else %}
-                <li><a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a></li>
-                <li><a class="nav-link" href="{{ url_for('auth.signup') }}">계정 생성</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">로그인</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.signup') }}">계정 생성</a></li>
                 {% endif %}
             </ul>
-        </nav>
-    </header>
-</div>
+        </div>
+    </nav>
+</header>
 <!-- Custom Navbar Style -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/custom-nav.css') }}" />
 <link rel="stylesheet" href="{{ url_for('static', filename='css/anim-flip.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/video-background.css') }}" />
+<link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
