--- a/dofinale/templates/intro.html
+++ b/dofinale/templates/intro.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <!-- Intro Logo Animation -->
-<div class="row d-flex align-items-center justify-content-center text-center h-100">
+<div class="container d-flex align-items-center justify-content-center text-center h-100">
     <div class="box">
         <div class="title">
             <span class="block"></span>
@@ -16,7 +16,8 @@
     </div>
 </div>
 
-<!-- Intro Logo Animation CSS -->
+<!-- CSS -->
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
 
 {% endblock %}
