--- a/dofinale/templates/chatbot.html
+++ b/dofinale/templates/chatbot.html
@@ -1,9 +1,8 @@
 <df-messenger
-  expand=True
   intent="WELCOME"
   chat-title="Doofy"
   agent-id="dcc4f570-5e46-4f16-bc2c-97d2c10c0bb7"
   language-code="ko"
-  chat-icon="https://raw.githubusercontent.com/SongYeongchang/DoFinale/master/dofinale/static/images/icons/chatbot_icon.png"
+  chat-icon="C:\Study\pycharm_projects\dofinale\dofinale\static\images\icons\chatbot.png"
 ></df-messenger>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
