--- a/dofinale/static/css/style.css
+++ b/dofinale/static/css/style.css
@@ -3,58 +3,12 @@
  */
 
 body {
-  background: #112c38;
-}
-
-main {
-  overflow-x: auto;
-  overflow-y: hidden;
+    font-family: 'Noto Sans KR', sans-serif;
 }
 
 a {
-  text-decoration: None;
+    text-decoration: None;
 }
-
-
-/*
- * Header
- */
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  color: rgba(255, 255, 255, .9);
-  border-bottom-color: rgba(255, 255, 255, .9);
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .navbar-toggler-icon {
-    background-image: url("../images/icons/navbar_toggler.png")
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-.navbar-toggler:focus {
-    box-shadow: None;
-}
-
-.navbar-collapse {
-    flex-grow: 0;
-}
-
 
 /*
  * Flip Animation
