--- a/dofinale/templates/auth/login.html
+++ b/dofinale/templates/auth/login.html
@@ -1,29 +1,63 @@
-{% extends "base.html" %}
+{% extends 'background.html' %}
 {% block content %}
+
 <div class="container">
+  <div class="row justify-content-center">
+    <div class="col-xl-5 col-md-8">
 
-    <!--  로그인이 안 된 상태에서 로그인이 필요한 서비스에 접속하는 경우 경고창을 띄워줌  -->
-    {% if request.args.get('next', '') %}
-    <div class="alert alert-danger" role="alert">
-        로그인을 먼저 진행하세요.
-    </div>
-    {% endif %}
+      <form class="bg-white rounded shadow-5-strong my-3 p-5" method="post">
 
-    <h5 class="my-3 border-bottom pb-2">로그인</h5>
-    <form method="post">
+        <h2 class="mb-3 pb-2 text-center">로그인</h2>
+
+        <!--  로그인이 안 된 상태에서 로그인이 필요한 서비스에 접속하는 경우 경고창을 띄워줌  -->
+        {% if request.args.get('next', '') %}
+        <div class="alert alert-danger" role="alert">
+          로그인을 먼저 진행하세요.
+        </div>
+        {% endif %}
+
         {{ form.csrf_token }}
         {% include "form_errors.html" %}
-        <div class="mb-3">
-            <label for="userid">사용자 이름</label>
-            <input type="text" class="form-control" name="userid" id="userid"
+
+        <!-- 아이디 입력 -->
+        <div class="form-outline mb-4">
+          <input type="text" class="form-control" name="userid" id="userid"
                    value="{{ form.userid.data or '' }}">
+          <label class="form-label" for="userid">아이디</label>
         </div>
-        <div class="mb-3">
-            <label for="userpw">비밀번호</label>
-            <input type="password" class="form-control" name="userpw" id="userpw"
+
+        <!-- 비밀번호 입력 -->
+        <div class="form-outline mb-4">
+          <input type="password" class="form-control" name="userpw" id="userpw"
                    value="{{ form.userpw.data or '' }}">
+          <label class="form-label" for="userpw">비밀번호</label>
         </div>
-        <button type="submit" class="btn btn-primary">로그인</button>
-    </form>
+
+        <!-- 2 column grid layout for inline styling -->
+        <div class="row mb-4">
+          <div class="col d-flex justify-content-center">
+            <!-- Checkbox -->
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
+              <label class="form-check-label" for="form1Example3">
+                아이디 기억
+              </label>
+            </div>
+          </div>
+
+          <div class="col text-center">
+            <!-- Simple link -->
+            <a href="#!">비밀번호 찾기</a>
+          </div>
+        </div>
+
+        <!-- Submit button -->
+        <button type="submit" class="btn btn-primary btn-block">
+          <strong>로그인</strong>
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
+
 {% endblock %}
