--- a/dofinale/templates/base.html
+++ b/dofinale/templates/base.html
@@ -1,26 +1,257 @@
 <!DOCTYPE html>
-<html lang="ko" class="w-100 h-100 mx-auto">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>DoFinale</title>
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-        <!-- Custom styles -->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-        <!-- Bootstrap JS -->
-        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    </head>
-    <body class="d-flex flex-column align-items-center h-100">
-        {% include "header.html" %}
-        <main class="container w-100 h-100 p-3 mx-auto flex-column">
-        <!-- 기본 템플릿 안에 삽입될 내용 Start -->
+<html lang="ko">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>DoFinale</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+    <!-- Google Fonts Roboto -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
+    <!-- MDB -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}" />
+    <!-- Custom styles -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
+</head>
+<body>
+    <!--Main Navigation-->
+    <header>
+      <style>
+        /* Height for devices larger than 576px */
+        @media (min-width: 992px) {
+          #intro {
+            margin-top: -58.59px;
+          }
+        }
+
+        i, .navbar .nav-link {
+          {% if isbgvid %}
+            color: #fff !important;
+          {% else %}
+            color: #000 !important;
+          {% endif %}
+        }
+      </style>
+
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg navbar-dark d-none d-lg-block border border-0" style="z-index: 2000;">
+        <div class="container-fluid">
+          <!-- Navbar brand -->
+          <a class="navbar-brand nav-link" target="_self" href="{{ url_for('main.index') }}">
+            <strong>두피날레</strong>
+          </a>
+          <!-- 토글러 -->
+          <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
+            aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarExample01">
+
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+              <!-- 서비스 소개 -->
+              <li class="nav-item">
+                <a class="nav-link" href="#" rel="nofollow"
+                  target="_self">소개</a>
+              </li>
+
+              <!-- 서비스 -->
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="serviceMenu"
+                  role="button"
+                  data-mdb-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  서비스
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li>
+                    <a class="dropdown-item" href="{{ url_for('service.survey') }}">자가 진단</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{{ url_for('service.scalp_diagnosis') }}">AI 두피 분석</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('post.community') }}" rel="nofollow"
+                  target="_self">커뮤니티</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('service.product_list') }}" target="_self">제품 소개</a>
+              </li>
+
+            </ul>
+
+            {% if g.user %}
+            <ul class="navbar-nav d-flex flex-row">
+              <!-- Right elements -->
+              <div class="d-flex align-items-center">
+                <!-- Icon -->
+                <a class="text-reset me-3" href="#">
+                  <i class="fas fa-shopping-cart fa-sm"></i>
+                </a>
+
+                <!-- Notifications -->
+                <div class="dropdown">
+                  <a
+                    class="text-reset me-3 dropdown-toggle hidden-arrow"
+                    href="#"
+                    id="navbarDropdownMenuLink"
+                    role="button"
+                    data-mdb-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <i class="fas fa-bell fa-sm"></i>
+                    <span class="badge rounded-pill badge-notification bg-danger">1</span>
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-end"
+                    aria-labelledby="navbarDropdownMenuLink"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="#">Some news</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Another news</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </li>
+                  </ul>
+                </div>
+                <!-- Avatar -->
+                <div class="dropdown">
+                  <a
+                    class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                    href="#"
+                    id="navbarDropdownMenuAvatar"
+                    role="button"
+                    data-mdb-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <img
+                      src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+                      class="rounded-circle"
+                      height="35"
+                      alt="Black and White Portrait of a Man"
+                      loading="lazy"
+                    />
+                  </a>
+                  <ul
+                    class="dropdown-menu dropdown-menu-end"
+                    aria-labelledby="navbarDropdownMenuAvatar"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="#">내 프로필</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">설정</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="{{ url_for('auth.logout') }}">로그아웃</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item text-danger" href="{{ url_for('auth.delete_user') }}">회원 탈퇴</a>
+                    </li>
+                  </ul>
+            {% else %}
+            <div class="d-flex align-items-center">
+              <a class="btn btn-link px-3 me-2 text-white" href="{{ url_for('auth.login') }}" role="button">
+                로그인
+              </a>
+              <a class="btn btn-primary me-3 text-white" href="{{ url_for('auth.signup') }}" role="button">
+                회원가입
+              </a>
+            </div>
+            {% endif %}
+
+
+
+
+
+          </div>
+        </div>
+      </nav>
+      <!-- Navbar -->
+      <!-- 기본 템플릿 안에 삽입될 내용 Start -->
+      {% if isbgvid %}
+        {% block background %}
+        {% endblock %}
+      {% else %}
         {% block content %}
         {% endblock %}
-        <!-- 기본 템플릿 안에 삽입될 내용 End -->
-        </main>
-        <footer class="mt-auto text-white">
-            <p>2022 Hankyung IT Campus <a href="https://getbootstrap.com/" class="text-white">AI Project</a>, by <a href="https://twitter.com/mdo" class="text-white">@TeamDoFinale</a>.</p>
-        </footer>
-    </body>
+      {% endif %}
+
+    <!-- 기본 템플릿 안에 삽입될 내용 End -->
+    </header>
+
+
+    <!--Footer-->
+    {% include "chatbot.html" %}
+    <footer class="bg-light text-lg-start">
+
+      <hr class="m-0" />
+
+      <div class="text-center py-4 align-items-center">
+        <a
+          href="https://www.youtube.com/channel/UC5CF7mLQZhvx8O5GODZAhdA"
+          class="btn btn-primary m-1"
+          role="button"
+          rel="nofollow"
+          target="_blank"
+        >
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a
+          href="https://www.facebook.com/mdbootstrap"
+          class="btn btn-primary m-1"
+          role="button"
+          rel="nofollow"
+          target="_blank"
+        >
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a
+          href="https://twitter.com/MDBootstrap"
+          class="btn btn-primary m-1"
+          role="button"
+          rel="nofollow"
+          target="_blank"
+        >
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a
+          href="https://github.com/mdbootstrap/mdb-ui-kit"
+          class="btn btn-primary m-1"
+          role="button"
+          rel="nofollow"
+          target="_blank"
+        >
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2020 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
+    <!--Footer-->
+    <!-- MDB -->
+    <script type="text/javascript" src="{{ url_for('static', filename='js/mdb.min.js') }}"></script>
+    <!-- Custom scripts -->
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}"></script>
+</body>
 </html>
