--- a/dofinale/templates/intro.html
+++ b/dofinale/templates/intro.html
@@ -1,23 +1,201 @@
-{% extends 'base.html' %}
+{% extends 'background.html' %}
 {% block content %}
 
-<!-- Intro Logo Animation -->
-<div class="container d-flex align-items-center justify-content-center text-center h-100">
-    <div class="box">
-        <div class="title">
-            <span class="block"></span>
-            <h1>두피날레<span></span></h1>
-        </div>
+<!-- 인트로 배경 및 로고 -->
 
-    <div class="role">
-        <div class="block"></div>
-            <p>AI 기반 두피 유형 진단 서비스</p>
-        </div>
+    <!--  배경 동영상  -->
+
+<div class="container d-flex align-items-center justify-content-center text-center h-100">
+    <div class="text-white">
+      <h1 class="mb-3">DoFinale</h1>
+      <h5 class="mb-4">AI Based Scalp Type Diagnosis Service</h5>
+      <a
+        class="btn btn-outline-light btn-lg m-2"
+        href="https://www.youtube.com/watch?v=c9B4TPnak1A"
+        role="button"
+        rel="nofollow"
+        target="_blank"
+        >Start tutorial</a
+      >
+      <a
+        class="btn btn-outline-light btn-lg m-2"
+        href="https://mdbootstrap.com/docs/standard/"
+        target="_blank"
+        role="button"
+        >Download MDB UI KIT</a
+      >
     </div>
 </div>
+</div>
+          </div>
+<!--Main layout-->
+  <main class="my-5">
+    <div class="container">
+      <!--Grid row-->
+      <div class="row">
+        <!--Grid column-->
+        <div class="col-md-9 mb-4">
+          <!--Section: Content-->
+          <section>
+            <!-- Post -->
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
+                  <img src="https://mdbootstrap.com/img/new/standard/nature/184.jpg" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                  </a>
+                </div>
+              </div>
 
-<!-- CSS -->
+              <div class="col-md-8 mb-4">
+                <h5>Very long post title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ratione
+                  necessitatibus itaque error alias repellendus nemo reiciendis aperiam quisquam
+                  minus ipsam reprehenderit commodi ducimus, in dicta aliquam eveniet dignissimos
+                  magni.
+                </p>
 
-<link rel="stylesheet" href="{{ url_for('static', filename='css/reveal.css') }}" />
+                <button type="button" class="btn btn-primary">Read</button>
+              </div>
+            </div>
 
+            <!-- Post -->
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
+                  <img src="https://mdbootstrap.com/img/new/standard/nature/002.jpg" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-md-8 mb-4">
+                <h5>Very long post title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ratione
+                  necessitatibus itaque error alias repellendus nemo reiciendis aperiam quisquam
+                  minus ipsam reprehenderit commodi ducimus, in dicta aliquam eveniet dignissimos
+                  magni.
+                </p>
+
+                <button type="button" class="btn btn-primary">Read</button>
+              </div>
+            </div>
+
+            <!-- Post -->
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
+                  <img src="https://mdbootstrap.com/img/new/standard/nature/023.jpg" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-md-8 mb-4">
+                <h5>Very long post title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ratione
+                  necessitatibus itaque error alias repellendus nemo reiciendis aperiam quisquam
+                  minus ipsam reprehenderit commodi ducimus, in dicta aliquam eveniet dignissimos
+                  magni.
+                </p>
+
+                <button type="button" class="btn btn-primary">Read</button>
+              </div>
+            </div>
+
+            <!-- Post -->
+            <div class="row">
+              <div class="col-md-4 mb-4">
+                <div class="bg-image hover-overlay shadow-1-strong rounded ripple" data-mdb-ripple-color="light">
+                  <img src="https://mdbootstrap.com/img/new/standard/nature/111.jpg" class="img-fluid" />
+                  <a href="#!">
+                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="col-md-8 mb-4">
+                <h5>Very long post title</h5>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ratione
+                  necessitatibus itaque error alias repellendus nemo reiciendis aperiam quisquam
+                  minus ipsam reprehenderit commodi ducimus, in dicta aliquam eveniet dignissimos
+                  magni.
+                </p>
+
+                <button type="button" class="btn btn-primary">Read</button>
+              </div>
+            </div>
+          </section>
+          <!--Section: Content-->
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-md-3 mb-4">
+          <!--Section: Sidebar-->
+          <section class="sticky-top" style="top: 80px;">
+            <!--Section: Ad-->
+            <section class="text-center border-bottom pb-4 mb-4">
+              <div class="bg-image hover-overlay ripple mb-4">
+                <img
+                  src="https://mdbootstrap.com/wp-content/themes/mdbootstrap4/content/en/_mdb5/standard/about/assets/mdb5-about.webp"
+                  class="img-fluid" />
+                <a href="https://mdbootstrap.com/docs/standard/" target="_blank">
+                  <div class="mask" style="background-color: rgba(57, 192, 237, 0.2);"></div>
+                </a>
+              </div>
+              <h5>Material Design for Bootstrap 5</h5>
+
+              <p>
+                500+ components, free templates, 1-min installation, extensive tutorial, huge
+                community. MIT license - free for personal & commercial use
+              </p>
+              <a role="button" class="btn btn-primary" href="https://mdbootstrap.com/docs/standard/"
+                target="_blank">Download for free<i class="fas fa-download ms-2"></i></a>
+            </section>
+            <!--Section: Ad-->
+
+            <!--Section: Video-->
+            <section class="text-center">
+              <h5 class="mb-4">두피 케어 추천 영상</h5>
+
+              <div class="embed-responsive embed-responsive-16by9 shadow-4-strong">
+                <iframe class="embed-responsive-item rounded" src="https://www.youtube.com/embed/QJhwYpJ89hc"
+                  allowfullscreen></iframe>
+              </div>
+            </section>
+            <!--Section: Video-->
+          </section>
+          <!--Section: Sidebar-->
+        </div>
+        <!--Grid column-->
+      </div>
+      <!--Grid row-->
+
+      <!-- Pagination -->
+      <nav class="my-4" aria-label="...">
+        <ul class="pagination pagination-circle justify-content-center">
+          <li class="page-item">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item active" aria-current="page">
+            <a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+            <a class="page-link" href="#">Next</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </main>
+  <!--Main layout-->
 {% endblock %}
