--- a/dofinale/templates/auth/delete_user.html
+++ b/dofinale/templates/auth/delete_user.html
@@ -1,5 +1,5 @@
 {% extends "background.html" %}
-{% block content %}
+{% block bgcontent %}
 
 <div class="container">
   <div class="row justify-content-center">
@@ -8,7 +8,7 @@
       <form class="bg-white rounded shadow-5-strong my-3 p-5" method="post">
 
         <h2 class="mb-3 pb-2 text-center">회원 탈퇴</h2>
-        <p>정말 탈퇴하시겠습니까?</p>
+        <p class="text-center">정말 탈퇴하시겠습니까?</p>
 
         <!-- Submit button -->
         <button type="submit" class="btn btn-danger btn-block">
