--- a/dofinale/templates/auth/login.html
+++ b/dofinale/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends 'background.html' %}
-{% block content %}
+{% block bgcontent %}
 
 <div class="container">
   <div class="row justify-content-center">
@@ -34,7 +34,8 @@
         </div>
 
         <!-- 2 column grid layout for inline styling -->
-        <div class="row mb-4">
+        <div class="row mb-4 align-items-center">
+
           <div class="col d-flex justify-content-center">
             <!-- Checkbox -->
             <div class="form-check">
@@ -49,13 +50,16 @@
             <!-- Simple link -->
             <a href="#!">비밀번호 찾기</a>
           </div>
+
         </div>
 
         <!-- Submit button -->
         <button type="submit" class="btn btn-primary btn-block">
           <strong>로그인</strong>
         </button>
+
       </form>
+
     </div>
   </div>
 </div>
