--- a/dofinale/templates/background.html
+++ b/dofinale/templates/background.html
@@ -3,16 +3,18 @@
 
 <!--헤더 배경-->
 <div id="intro" class="bg-image vh-100 shadow-1-strong">
+    <!--배경 영상-->
     <video id="video1" style="min-width: 100%; min-height: 100%;" autoplay muted playsinline loop>
       <source class="h-100" src="{{ url_for('static', filename='videos/bg_video.mp4') }}" type="video/mp4" />
     </video>
+    <!--마스킹-->
     <div class="mask d-flex align-items-center"     style="
     background: linear-gradient(
       45deg,
       rgba(29, 236, 197, 0.7),
       rgba(91, 14, 214, 0.7) 100%
     );">
-        {% block content %}
+        {% block bgcontent %}
         {% endblock %}
     </div>
 </div>
