--- a/dofinale/templates/chatbot.html
+++ b/dofinale/templates/chatbot.html
@@ -3,6 +3,7 @@
   chat-title="Doofy"
   agent-id="dcc4f570-5e46-4f16-bc2c-97d2c10c0bb7"
   language-code="ko"
-  chat-icon="C:\Study\pycharm_projects\dofinale\dofinale\static\images\icons\chatbot.png"
+  chat-icon="https://raw.githubusercontent.com/SongYeongchang/DoFinale/master/dofinale/static/images/icons/chatbot.png"
+  wait-open
 ></df-messenger>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
