--- a/dofinale/templates/service/scalp_diagnosis.html
+++ b/dofinale/templates/service/scalp_diagnosis.html
@@ -1,15 +1,68 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="post" action="{{ url_for('service.scalp_diagnosis') }}" enctype="multipart/form-data">
-    <div class="form-group mx-sm-5 mb-5 my-5" style="margin-right: 10rem!important; margin-left: 10rem!important;">
-      <label for="formFile" class="form-label">원하는 두피 진단 부위의 근접 촬영 이미지를 올려주시면<br><br>AI 챗봇 'Doofy"가 두피 유형을 분석 후<br><br>맞춤 제품과 가까운 모발 전문 병원을 추천해드립니다!<br><br>▼ 이미지를 업로드하세요. ▼</label>
-      <input class="form-control" type="file" id="formFile" name="file">
-      <button type="submit" class="btn btn-primary my-2">사진 전송</button>
-    </div>
-</form>
 
-{% if btnclick %}
-{% include "chatbot.html" %}
-{% endif%}
+    <!--헤더 영역-->
+    <header class="bg-dark py-5">
+        <div class="container px-4 px-lg-5 my-5">
+            <div class="text-center text-white">
+                <h1 class="display-5 fw-bolder">AI 두피 진단</h1>
+                <p class="lead fw-normal text-white-50 mb-0">스마트폰 촬영 이미지로 두피 유형을 진단해드립니다.</p>
+            </div>
+        </div>
+    </header>
+
+
+    <!--Main layout-->
+    <main class="mt-5">
+      <div class="container w-75 align-itmes-center">
+        <!--Section: Content-->
+        <section>
+          <div class="row">
+            <div class="col-md-6 gx-5 mb-4">
+              <div class="bg-image hover-overlay ripple shadow-2-strong" data-mdb-ripple-color="light">
+                <img src="{{ url_for('static', filename='images/stock/AI_robot.jpg') }}" class="img-fluid" />
+              </div>
+            </div>
+
+            <div class="col-md-6 gx-5 mb-4">
+              <h4><strong>AI 기반 두피 유형 진단 서비스</strong></h4>
+              <p class="text-muted">
+                건강한 머릿결을 위한 올바른 두피 관리는 자신의 두피 유형을 아는 것에서부터 시작됩니다.
+                하지만 의료지식이 부족한 일반인이 전문의 소견 없이 자신의 두피 유형을 파악하는 것은 쉽지 않습니다.
+                Team DoFinale는 약 10만 건에 달하는 다양한 유형의 두피 이미지를 학습시킨
+                AI 이미지 분류 모델을 통해 간단한 사진 촬영만으로 두피 유형을 파악할 수 있는 서비스를 개발했습니다.
+              </p>
+              <p><strong>이렇게 촬영하세요!</strong></p>
+              <p class="text-muted">
+                스마트폰 카메라의 접사 기능을 이용하여
+                선명하게 확대한 두피 이미지를 촬영해주세요!
+                <br><br>
+                아래의 버튼을 클릭하면 두피유형 분석을 도와드릴 AI 챗봇으로 연결됩니다.
+              </p>
+
+              <div class="py-4 text-center">
+                <form method="post">
+                  <button type="submit" class="btn btn-primary btn-lg m-2">나의 두피 유형 알아보기</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!--Section: Content-->
+        <form method="post" action="{{ url_for('service.scalp_diagnosis') }}" enctype="multipart/form-data">
+            <div class="form-group mx-sm-5 mb-5 my-5" style="margin-right: 10rem!important; margin-left: 10rem!important;">
+              <label for="formFile" class="form-label">
+                  원하는 두피 진단 부위의 근접 촬영 이미지를 올려주시면<br>
+                  <br>AI 챗봇 'Doofy"가 두피 유형을 분석 후<br>
+                  <br>맞춤 제품과 가까운 모발 전문 병원을 추천해드립니다!<br>
+                  <br>▼ 이미지를 업로드하세요. ▼
+              </label>
+              <input class="form-control" type="file" id="formFile" name="file">
+              <button type="submit" class="btn btn-primary my-2">사진 전송</button>
+            </div>
+        </form>
+      </div>
+    </main>
+    <!--Main layout-->
 
 {% endblock %}
